--- a/gestion-tutorat-front/src/app/components/affiche-etudiants/affiche-etudiants.component.html
+++ b/gestion-tutorat-front/src/app/components/affiche-etudiants/affiche-etudiants.component.html
@@ -1,115 +1,215 @@
 <div style="margin: 1%; margin-right: 2%">
-  <table mat-table [dataSource]="students" class="mat-elevation-z8">
+  <div class="table-scroll-wrapper">
+    <table mat-table [dataSource]="students" class="mat-elevation-z8">
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef class="stickyID">Id</th>
+        <td mat-cell *matCellDef="let element" class="stickyID">
+          <ng-container *ngIf="element.id != null; else notId">
+            {{ element.id }}
+          </ng-container>
+          <ng-template #notId><span class="text-muted">Non assigné</span></ng-template>
+        </td>
+      </ng-container>
+      
+      <ng-container matColumnDef="nom">
+        <th mat-header-cell *matHeaderCellDef>Nom</th>
+        <td mat-cell *matCellDef="let element">
+          <ng-container *ngIf="element.nom; else notNom">
+            <a [routerLink]="['/etudiants', element.id]">{{ element.nom }}</a>
+          </ng-container>
+          <ng-template #notNom><span class="text-muted">Non spécifié</span></ng-template>
+        </td>
+      </ng-container>
+      
+      <ng-container matColumnDef="prenom">
+        <th mat-header-cell *matHeaderCellDef>Prénom</th>
+        <td mat-cell *matCellDef="let element">
+          <ng-container *ngIf="element.prenom; else notPrenom">
+            <a [routerLink]="['/etudiants', element.id]">{{ element.prenom }}</a>
+          </ng-container>
+          <ng-template #notPrenom><span class="text-muted">Non spécifié</span></ng-template>
+        </td>
+      </ng-container>
+      
+      <ng-container matColumnDef="emailEcole">
+        <th mat-header-cell *matHeaderCellDef>Email École</th>
+        <td mat-cell *matCellDef="let element">
+          <ng-container *ngIf="element.emailEcole; else notEmail">
+            {{ element.emailEcole }}
+          </ng-container>
+          <ng-template #notEmail><span class="text-muted">Non spécifié</span></ng-template>
+        </td>
+      </ng-container>
+      
+      <ng-container matColumnDef="origine">
+        <th mat-header-cell *matHeaderCellDef>Origine</th>
+        <td mat-cell *matCellDef="let element" class="truncate-col-origine">
+          <ng-container *ngIf="element.origine; else notOrigine">
+            {{ element.origine }}
+          </ng-container>
+          <ng-template #notOrigine><span class="text-muted">Non spécifié</span></ng-template>
+        </td>
+      </ng-container>
+      
+      <ng-container matColumnDef="ecole">
+        <th mat-header-cell *matHeaderCellDef>École</th>
+        <td mat-cell *matCellDef="let element">
+          <ng-container *ngIf="element.ecole; else notEcole">
+            {{ element.ecole }}
+          </ng-container>
+          <ng-template #notEcole><span class="text-muted">Non spécifié</span></ng-template>
+        </td>
+      </ng-container>
+      
+      <ng-container matColumnDef="obligationInternational">
+        <th mat-header-cell *matHeaderCellDef>Obligation International</th>
+        <td mat-cell *matCellDef="let element">
+          <ng-container *ngIf="element.obligationInternational; else notObl">
+            {{ element.obligationInternational }}
+          </ng-container>
+          <ng-template #notObl><span class="text-muted">Non spécifié</span></ng-template>
+        </td>
+      </ng-container>
+      
+      <ng-container matColumnDef="stage1A">
+        <th mat-header-cell *matHeaderCellDef>Stage 1A</th>
+        <td mat-cell *matCellDef="let element">
+          <ng-container *ngIf="element.stage1A; else notStage">
+            {{ element.stage1A }}
+          </ng-container>
+          <ng-template #notStage><span class="text-muted">Non spécifié</span></ng-template>
+        </td>
+      </ng-container>
+      
+      <ng-container matColumnDef="codeClasse">
+        <th mat-header-cell *matHeaderCellDef>Code Classe</th>
+        <td mat-cell *matCellDef="let element">
+          <ng-container *ngIf="element.codeClasse; else notCodeClasse">
+            {{ element.codeClasse }}
+          </ng-container>
+          <ng-template #notCodeClasse><span class="text-muted">Non spécifié</span></ng-template>
+        </td>
+      </ng-container>
+      
+      <ng-container matColumnDef="nomGroupe">
+        <th mat-header-cell *matHeaderCellDef>Nom Groupe</th>
+        <td mat-cell *matCellDef="let element">
+          <ng-container *ngIf="element.nomGroupe; else notGroupe">
+            {{ element.nomGroupe }}
+          </ng-container>
+          <ng-template #notGroupe><span class="text-muted">Non spécifié</span></ng-template>
+        </td>
+      </ng-container>
+      
+      <ng-container matColumnDef="langueMajeure">
+        <th mat-header-cell *matHeaderCellDef>Langue Majeure</th>
+        <td mat-cell *matCellDef="let element">
+          <ng-container *ngIf="element.langueMajeure; else notMaj">
+            {{ element.langueMajeure }}
+          </ng-container>
+          <ng-template #notMaj><span class="text-muted">Non spécifié</span></ng-template>
+        </td>
+      </ng-container>
+      
+      <ng-container matColumnDef="iniAlt">
+        <th mat-header-cell *matHeaderCellDef>Ini/Alt</th>
+        <td mat-cell *matCellDef="let element">
+          <ng-container *ngIf="element.iniAlt; else notIni">
+            {{ element.iniAlt }}
+          </ng-container>
+          <ng-template #notIni><span class="text-muted">Non spécifié</span></ng-template>
+        </td>
+      </ng-container>
+      
+      <ng-container matColumnDef="entreprise">
+        <th mat-header-cell *matHeaderCellDef>Entreprise</th>
+        <td mat-cell *matCellDef="let element">
+          <ng-container *ngIf="element.entreprise; else notEnt">
+            {{ element.entreprise }}
+          </ng-container>
+          <ng-template #notEnt><span class="text-muted">Non spécifiée</span></ng-template>
+        </td>
+      </ng-container>
+      
+      <ng-container matColumnDef="fonctionApprenti">
+        <th mat-header-cell *matHeaderCellDef>Fonction Apprenti</th>
+        <td mat-cell *matCellDef="let element">
+          <ng-container *ngIf="element.fonctionApprenti; else notFonction">
+            {{ element.fonctionApprenti }}
+          </ng-container>
+          <ng-template #notFonction><span class="text-muted">Non spécifiée</span></ng-template>
+        </td>
+      </ng-container>
+      
+      <ng-container matColumnDef="langue">
+        <th mat-header-cell *matHeaderCellDef>Langue</th>
+        <td mat-cell *matCellDef="let element">
+          <ng-container *ngIf="element.langue; else notLangue">
+            {{ element.langue }}
+          </ng-container>
+          <ng-template #notLangue><span class="text-muted">Non spécifiée</span></ng-template>
+        </td>
+      </ng-container>
+      
+      <ng-container matColumnDef="commentaireAffectation">
+        <th mat-header-cell *matHeaderCellDef>Commentaire Affectation</th>
+        <td mat-cell *matCellDef="let element" class="truncate-col-commentaire">
+          <ng-container *ngIf="element.commentaireAffectation; else notComment">
+            {{ element.commentaireAffectation }}
+          </ng-container>
+          <ng-template #notComment><span class="text-muted">Non spécifié</span></ng-template>
+        </td>
+      </ng-container>
+      
+      <ng-container matColumnDef="departementRattachement">
+        <th mat-header-cell *matHeaderCellDef>Département Rattachement</th>
+        <td mat-cell *matCellDef="let element">
+          <ng-container *ngIf="element.departementRattachement; else notDept">
+            {{ element.departementRattachement }}
+          </ng-container>
+          <ng-template #notDept><span class="text-muted">Non spécifié</span></ng-template>
+        </td>
+      </ng-container>
+      
+      <ng-container matColumnDef="affecte">
+        <th mat-header-cell *matHeaderCellDef>Affecté</th>
+        <td mat-cell *matCellDef="let element">
+          <ng-container *ngIf="element.affecte != null; else notAffecte">
+            {{ element.affecte ? 'Oui' : 'Non' }}
+          </ng-container>
+          <ng-template #notAffecte><span class="text-muted">Non affecté</span></ng-template>
+        </td>
+      </ng-container>
+      
 
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> Id </th>
-      <td mat-cell *matCellDef="let element"> {{ element.id }} </td>
-    </ng-container>
+      <ng-container matColumnDef="tuteur">
+        <th mat-header-cell *matHeaderCellDef>Tuteur</th>
+        <td mat-cell *matCellDef="let element">
+          <ng-container *ngIf="element.tuteur; else notAssigned">
+            {{ element.tuteur.nom }} {{ element.tuteur.prenom }}
+          </ng-container>
+          <ng-template #notAssigned>
+            <span class="text-muted">Non assigné</span>
+          </ng-template>
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="emailEcole">
-      <th mat-header-cell *matHeaderCellDef> Email Ecole </th>
-      <td mat-cell *matCellDef="let element"> {{ element.emailEcole }} </td>
-    </ng-container>
+      <ng-container matColumnDef="actions" *ngIf="showEdit || showDelete">
+        <th mat-header-cell *matHeaderCellDef class="sticky">Actions</th>
+        <td mat-cell *matCellDef="let element" class="sticky">
+          <button type="button" [routerLink]="['/etudiants/edit', element.id]" class="icon-btn edit" *ngIf="showEdit" title="Éditer">
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button type="button" class="icon-btn delete" *ngIf="showDelete" (click)="onDeleteEtudiant(element.id)" title="Supprimer">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="origine">
-      <th mat-header-cell *matHeaderCellDef> Origine </th>
-      <td mat-cell *matCellDef="let element"> {{ element.origine }} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="ecole">
-      <th mat-header-cell *matHeaderCellDef> Ecole </th>
-      <td mat-cell *matCellDef="let element"> {{ element.ecole }} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="prenom">
-      <th mat-header-cell *matHeaderCellDef> Prenom </th>
-      <td mat-cell *matCellDef="let element"> {{ element.prenom }} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="nom">
-      <th mat-header-cell *matHeaderCellDef> Nom </th>
-      <td mat-cell *matCellDef="let element"> {{ element.nom }} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="obligationInternational">
-      <th mat-header-cell *matHeaderCellDef> Obligation International </th>
-      <td mat-cell *matCellDef="let element"> {{ element.obligationInternational }} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="stage1A">
-      <th mat-header-cell *matHeaderCellDef> Stage1 A </th>
-      <td mat-cell *matCellDef="let element"> {{ element.stage1A }} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="codeClasse">
-      <th mat-header-cell *matHeaderCellDef> Code Classe </th>
-      <td mat-cell *matCellDef="let element"> {{ element.codeClasse }} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="nomGroupe">
-      <th mat-header-cell *matHeaderCellDef> Nom Groupe </th>
-      <td mat-cell *matCellDef="let element"> {{ element.nomGroupe }} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="langueMajeure">
-      <th mat-header-cell *matHeaderCellDef> Langue Majeure </th>
-      <td mat-cell *matCellDef="let element"> {{ element.langueMajeure }} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="iniAlt">
-      <th mat-header-cell *matHeaderCellDef> Ini Alt </th>
-      <td mat-cell *matCellDef="let element"> {{ element.iniAlt }} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="entreprise">
-      <th mat-header-cell *matHeaderCellDef> Entreprise </th>
-      <td mat-cell *matCellDef="let element"> {{ element.entreprise }} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="fonctionApprenti">
-      <th mat-header-cell *matHeaderCellDef> Fonction Apprenti </th>
-      <td mat-cell *matCellDef="let element"> {{ element.fonctionApprenti }} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="langue">
-      <th mat-header-cell *matHeaderCellDef> Langue </th>
-      <td mat-cell *matCellDef="let element"> {{ element.langue }} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="commentaireAffectation">
-      <th mat-header-cell *matHeaderCellDef> Commentaire Affectation </th>
-      <td mat-cell *matCellDef="let element"> {{ element.commentaireAffectation }} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="departementRattachement">
-      <th mat-header-cell *matHeaderCellDef> Département Rattachement </th>
-      <td mat-cell *matCellDef="let element"> {{ element.departementRattachement }} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="affecte">
-      <th mat-header-cell *matHeaderCellDef> Affecte </th>
-      <td mat-cell *matCellDef="let element"> {{ element.affecte }} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="tuteur">
-      <th mat-header-cell *matHeaderCellDef> Tuteur </th>
-      <td mat-cell *matCellDef="let element"> {{ element.tuteur }} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef> Actions </th>
-      <td mat-cell *matCellDef="let element">
-        <button type="button" class="btn btn-outline-warning btn-sm" *ngIf="showEdit" (click)="edit(element)">Edit</button>
-        <br><br>
-        <button type="button" class="btn btn-danger btn-sm" *ngIf="showDelete" (click)="delete(element)">Delete</button>
-      </td>
-    </ng-container>
-
-    <!-- En-tête du tableau -->
-    <tr mat-header-row *matHeaderRowDef="columns"></tr>
-    <!-- Lignes du tableau -->
-    <tr mat-row *matRowDef="let row; columns: columns"></tr>
-  </table>
+      <tr mat-header-row *matHeaderRowDef="columns"></tr>
+      <tr mat-row *matRowDef="let row; columns: columns"></tr>
+    </table>
+  </div>
 </div>
 
 <div>{{ pageCount }} pages, {{ total }} étudiants</div>
@@ -144,5 +244,5 @@
 </div>
 
 <div class="actions-container">
-  
+
 </div>
