--- a/gestion-tutorat-front/src/app/app.component.html
+++ b/gestion-tutorat-front/src/app/app.component.html
@@ -17,6 +17,11 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
+        <!-- Connexion -->
+        <li class="nav-item">
+          <a href="https://cas7d.imtbs-tsp.eu/cas/login" routerLinkActive="active" class="nav-link">Connexion</a>
+        </li>
+
         <!-- Importation -->
         <li class="nav-item">
           <a routerLink="/import" routerLinkActive="active" class="nav-link">Importer Fichiers</a>
