--- a/gestion-tutorat-front/src/app/components/affectation-manuelle/affectation-manuelle.component.css
+++ b/gestion-tutorat-front/src/app/components/affectation-manuelle/affectation-manuelle.component.css
@@ -265,3 +265,14 @@ a {
 .icon-btn.delete:hover mat-icon {
   color: #fff;
 }
+
+/* RESULTAT FILTRAGE */
+.no-results {
+  width: 100%;
+  text-align: center;
+  font-style: italic;
+  color: #888;
+  margin: 20px auto;
+  font-size: 1rem;
+}
+
