--- a/gestion-tutorat-front/src/app/components/affectation-manuelle/affectation-manuelle.component.html
+++ b/gestion-tutorat-front/src/app/components/affectation-manuelle/affectation-manuelle.component.html
@@ -5,8 +5,8 @@
         <h2>Liste des Étudiants</h2>
         <app-filtre-etudiants [students]="students" (onFilter)="applyFilters($event)"></app-filtre-etudiants>
 
-        <!--PAGINATION 2-->
-        <div class="pagination-wrapper">
+        <!--PAGINATION-->
+        <div class="pagination-wrapper" *ngIf="pagedStudents.length !== 0">
         <div class="pagination-controls" >
           <button (click)="goToPreviousPage()" [disabled]="currentPage === 1" class="pagination-btn">
             Précédent
@@ -34,9 +34,11 @@
           </button>
         </div>    
         </div>  
-        <!--FIN PAGINATION 2-->
-        
-        <div *ngFor="let student of pagedStudents" class="student-card">
+        <!--FIN PAGINATION-->
+        <div *ngIf="pagedStudents.length === 0" class="no-results">
+            Aucun étudiant ne correspond aux filtres appliqués.
+          </div>
+        <div *ngFor="let student of pagedStudents" class="student-card"> 
           <div class="card">
             <mat-card-header style="display: flex; justify-content: space-between; align-items: left;">
               
