filtres etudiant terminé

--- a/gestion-tutorat-front/src/app/components/filtre-etudiants/filtre-etudiants.component.html
+++ b/gestion-tutorat-front/src/app/components/filtre-etudiants/filtre-etudiants.component.html
@@ -1,3 +1,4 @@
+<div class="filter-wrapper">
 <mat-expansion-panel (opened)="panelOpenState.set(true)" (closed)="panelOpenState.set(false)">
     <mat-expansion-panel-header>
       <mat-panel-description>
@@ -78,4 +79,4 @@
       </div>
     </form>
   </mat-expansion-panel>
-  
+</div>
