mise en forme du filtre

--- a/gestion-tutorat-front/src/app/components/affectation-manuelle/affectation-manuelle.component.html
+++ b/gestion-tutorat-front/src/app/components/affectation-manuelle/affectation-manuelle.component.html
@@ -99,6 +99,7 @@
     <div class="right-column border">
       <div class="cards-container">
         <h2>Liste des Tuteurs</h2>
+        <app-filtre-tuteur></app-filtre-tuteur>
         <!-- PAGINATION TUTEURS -->
           <div class="pagination-wrapper">
             <div class="pagination-controls" *ngIf="totalPagesTuteur > 1">
