add list tuteurs & majeures

--- a/gestion-tutorat-front/src/app/app.component.html
+++ b/gestion-tutorat-front/src/app/app.component.html
@@ -31,6 +31,12 @@
         <li class="nav-item">
           <a routerLink="/etudiants/all" routerLinkActive="active" class="nav-link">Liste Étudiants</a>
         </li>
+        <li class="nav-item">
+          <a routerLink="/tuteurs/all" routerLinkActive="active" class="nav-link">Liste Tuteurs</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/majeures/all" routerLinkActive="active" class="nav-link">Liste Majeures</a>
+        </li>
 
         <!-- Auto-Affectation -->
         <li class="nav-item">
