--- a/gestion-tutorat-front/src/app/app.component.html
+++ b/gestion-tutorat-front/src/app/app.component.html
@@ -19,7 +19,11 @@
       <ul class="navbar-nav ms-auto">
         <!-- Connexion -->
         <li class="nav-item">
-          <a href="https://cas7d.imtbs-tsp.eu/cas/login" routerLinkActive="active" class="nav-link">Connexion</a>
+          <a href="https://cas7d.imtbs-tsp.eu/cas/login?service=http://localhost:8080/" routerLinkActive="active" class="nav-link">Connexion CAS</a>
+        </li>
+        
+        <li class="nav-item">
+          <a routerLink="/authentification" routerLinkActive="active" class="nav-link">Connexion</a>
         </li>
 
         <!-- Importation -->
