--- a/gestion-tutorat-front/src/app/components/filtre-etudiants/filtre-etudiants.component.html
+++ b/gestion-tutorat-front/src/app/components/filtre-etudiants/filtre-etudiants.component.html
@@ -12,7 +12,7 @@
           <label class="checkbox-container">
             <input type="checkbox" [(ngModel)]="showAffectation" name="showAffectation">
             <span class="checkmark"></span>
-            Selon l'affectation
+            Affectation
           </label>
           <div *ngIf="showAffectation">
             <label>Choisir l'affectation :</label>
@@ -27,7 +27,7 @@
           <label class="checkbox-container">
             <input type="checkbox" [(ngModel)]="showNom" name="showNom">
             <span class="checkmark"></span>
-            Selon le nom et prénom
+            Nom et Prénom
           </label>
           <div *ngIf="showNom">
             <label>Nom :</label>
@@ -42,7 +42,7 @@
           <label class="checkbox-container">
             <input type="checkbox" [(ngModel)]="showdep" name="showdep">
             <span class="checkmark"></span>
-            Selon le code de la classe
+            Code de la classe
           </label>
           <div *ngIf="showdep">
             <label>Code :</label>
