--- a/gestion-tutorat-front/src/app/components/affectation-manuelle/affectation-manuelle.component.html
+++ b/gestion-tutorat-front/src/app/components/affectation-manuelle/affectation-manuelle.component.html
@@ -67,20 +67,28 @@
             </mat-card-header>
             <mat-card-content>
               <div class="student-details">
-                <span><strong>Email:</strong> {{ student.emailEcole }}, </span>
-                <span><strong>Origine:</strong> {{ student.origine }}, </span>
-                <span><strong>École:</strong> {{ student.ecole }}, </span>
-                <span><strong>Code Classe:</strong> {{ student.codeClasse }}, </span>
-                <span><strong>Nom Groupe:</strong> {{ student.nomGroupe }}, </span>
-                <span><strong>Langue Majeure:</strong> {{ student.langueMajeure }}, </span>
-                <span><strong>Ini/Alt:</strong> {{ student.iniAlt }}, </span>
-                <span><strong>Entreprise:</strong> {{ student.entreprise }}, </span>
-                <span><strong>Fonction Apprenti:</strong> {{ student.fonctionApprenti }}, </span>
-                <span><strong>Langue:</strong> {{ student.langue }}, </span>
-                <span><strong>Commentaire Affectation:</strong> {{ student.commentaireAffectation }}, </span>
-                <span><strong>Département Rattachement:</strong> {{ student.departementRattachement }}, </span>
+                <span><strong>Email:</strong> {{ student.emailEcole || 'Non spécifié'}}, </span>
+                <span><strong>Origine:</strong> {{ student.origine || 'Non spécifié'}}, </span>
+                <span><strong>École:</strong> {{ student.ecole || 'Non spécifiée'}}, </span>
+                <span><strong>Code Classe:</strong> {{ student.codeClasse || 'Non spécifié'}}, </span>
+                <span><strong>Nom Groupe:</strong> {{ student.nomGroupe || 'Non spécifié'}}, </span>
+                <span><strong>Langue Majeure:</strong> {{ student.langueMajeure || 'Non spécifiée'}}, </span>
+                <span><strong>Ini/Alt:</strong> {{ student.iniAlt || 'Non spécifié'}}, </span>
+                <span><strong>Entreprise:</strong> {{ student.entreprise || 'Non spécifiée'}}, </span>
+                <span><strong>Fonction Apprenti:</strong> {{ student.fonctionApprenti || 'Non spécifiée'}}, </span>
+                <span><strong>Langue:</strong> {{ student.langue || 'Non spécifiée'}}, </span>
+                <span><strong>Commentaire Affectation:</strong> {{ student.commentaireAffectation || 'Non spécifié'}}, </span>
+                <span><strong>Département Rattachement:</strong> {{ student.departementRattachement || 'Non assigné' }}, </span>
                 <span><strong>Affecté:</strong> {{ student.affecte ? 'Oui' : 'Non' }}, </span>
-                <span><strong>Tuteur:</strong> {{ student.tuteur?.prenom }} {{ student.tuteur?.nom || 'Non assigné' }}, </span>
+                <span *ngIf="student.tuteur; else nonAssigne">
+                  <strong>Tuteur:</strong>
+                  <a [routerLink]="['/tuteurs', student.tuteur.id]">
+                    {{ student.tuteur.prenom }} {{ student.tuteur.nom }}
+                  </a>
+                </span>
+                <ng-template #nonAssigne>
+                  <span><strong>Tuteur:</strong> Non assigné</span>
+                </ng-template>
 
               </div>
             </mat-card-content>
@@ -130,6 +138,9 @@
             </div>
           </div>
         <!-- FIN PAGINATION TUTEURS -->
+        <div *ngIf="pagedTuteurs.length === 0" class="no-results">
+            Aucun tuteur ne correspond aux filtres appliqués.
+          </div>
         <mat-card *ngFor="let tutor of pagedTuteurs" class="tutor-card">
           <div class="card">
           <mat-card-header>
