--- a/gestion-tutorat-front/src/app/components/affiche-etudiants/affiche-etudiants.component.html
+++ b/gestion-tutorat-front/src/app/components/affiche-etudiants/affiche-etudiants.component.html
@@ -2,7 +2,7 @@
   <div class="table-scroll-wrapper">
     <table mat-table [dataSource]="students" class="mat-elevation-z8">
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef class="stickyID">Id</th>
+        <th mat-header-cell *matHeaderCellDef class="stickyHeader stickyID">Id</th>
         <td mat-cell *matCellDef="let element" class="stickyID">
           <ng-container *ngIf="element.id != null; else notId">
             {{ element.id }}
@@ -12,7 +12,7 @@
       </ng-container>
       
       <ng-container matColumnDef="nom">
-        <th mat-header-cell *matHeaderCellDef>Nom</th>
+        <th mat-header-cell *matHeaderCellDef class="stickyHeader">Nom</th>
         <td mat-cell *matCellDef="let element">
           <ng-container *ngIf="element.nom; else notNom">
             <a [routerLink]="['/etudiants', element.id]">{{ element.nom }}</a>
@@ -22,7 +22,7 @@
       </ng-container>
       
       <ng-container matColumnDef="prenom">
-        <th mat-header-cell *matHeaderCellDef>Prénom</th>
+        <th mat-header-cell *matHeaderCellDef class="stickyHeader">Prénom</th>
         <td mat-cell *matCellDef="let element">
           <ng-container *ngIf="element.prenom; else notPrenom">
             <a [routerLink]="['/etudiants', element.id]">{{ element.prenom }}</a>
@@ -32,7 +32,7 @@
       </ng-container>
       
       <ng-container matColumnDef="emailEcole">
-        <th mat-header-cell *matHeaderCellDef>Email École</th>
+        <th mat-header-cell *matHeaderCellDef class="stickyHeader">Email École</th>
         <td mat-cell *matCellDef="let element">
           <ng-container *ngIf="element.emailEcole; else notEmail">
             {{ element.emailEcole }}
@@ -42,7 +42,7 @@
       </ng-container>
       
       <ng-container matColumnDef="origine">
-        <th mat-header-cell *matHeaderCellDef>Origine</th>
+        <th mat-header-cell *matHeaderCellDef class="stickyHeader">Origine</th>
         <td mat-cell *matCellDef="let element" class="truncate-col-origine">
           <ng-container *ngIf="element.origine; else notOrigine">
             {{ element.origine }}
@@ -52,7 +52,7 @@
       </ng-container>
       
       <ng-container matColumnDef="ecole">
-        <th mat-header-cell *matHeaderCellDef>École</th>
+        <th mat-header-cell *matHeaderCellDef class="stickyHeader">École</th>
         <td mat-cell *matCellDef="let element">
           <ng-container *ngIf="element.ecole; else notEcole">
             {{ element.ecole }}
@@ -62,7 +62,7 @@
       </ng-container>
       
       <ng-container matColumnDef="obligationInternational">
-        <th mat-header-cell *matHeaderCellDef>Obligation International</th>
+        <th mat-header-cell *matHeaderCellDef class="stickyHeader">Obligation International</th>
         <td mat-cell *matCellDef="let element">
           <ng-container *ngIf="element.obligationInternational; else notObl">
             {{ element.obligationInternational }}
@@ -72,7 +72,7 @@
       </ng-container>
       
       <ng-container matColumnDef="stage1A">
-        <th mat-header-cell *matHeaderCellDef>Stage 1A</th>
+        <th mat-header-cell *matHeaderCellDef class="stickyHeader">Stage 1A</th>
         <td mat-cell *matCellDef="let element">
           <ng-container *ngIf="element.stage1A; else notStage">
             {{ element.stage1A }}
@@ -82,7 +82,7 @@
       </ng-container>
       
       <ng-container matColumnDef="codeClasse">
-        <th mat-header-cell *matHeaderCellDef>Code Classe</th>
+        <th mat-header-cell *matHeaderCellDef class="stickyHeader">Code Classe</th>
         <td mat-cell *matCellDef="let element">
           <ng-container *ngIf="element.codeClasse; else notCodeClasse">
             {{ element.codeClasse }}
@@ -92,7 +92,7 @@
       </ng-container>
       
       <ng-container matColumnDef="nomGroupe">
-        <th mat-header-cell *matHeaderCellDef>Nom Groupe</th>
+        <th mat-header-cell *matHeaderCellDef class="stickyHeader">Nom Groupe</th>
         <td mat-cell *matCellDef="let element">
           <ng-container *ngIf="element.nomGroupe; else notGroupe">
             {{ element.nomGroupe }}
@@ -102,7 +102,7 @@
       </ng-container>
       
       <ng-container matColumnDef="langueMajeure">
-        <th mat-header-cell *matHeaderCellDef>Langue Majeure</th>
+        <th mat-header-cell *matHeaderCellDef class="stickyHeader">Langue Majeure</th>
         <td mat-cell *matCellDef="let element">
           <ng-container *ngIf="element.langueMajeure; else notMaj">
             {{ element.langueMajeure }}
@@ -112,7 +112,7 @@
       </ng-container>
       
       <ng-container matColumnDef="iniAlt">
-        <th mat-header-cell *matHeaderCellDef>Ini/Alt</th>
+        <th mat-header-cell *matHeaderCellDef class="stickyHeader">Ini/Alt</th>
         <td mat-cell *matCellDef="let element">
           <ng-container *ngIf="element.iniAlt; else notIni">
             {{ element.iniAlt }}
@@ -122,7 +122,7 @@
       </ng-container>
       
       <ng-container matColumnDef="entreprise">
-        <th mat-header-cell *matHeaderCellDef>Entreprise</th>
+        <th mat-header-cell *matHeaderCellDef class="stickyHeader">Entreprise</th>
         <td mat-cell *matCellDef="let element">
           <ng-container *ngIf="element.entreprise; else notEnt">
             {{ element.entreprise }}
@@ -132,7 +132,7 @@
       </ng-container>
       
       <ng-container matColumnDef="fonctionApprenti">
-        <th mat-header-cell *matHeaderCellDef>Fonction Apprenti</th>
+        <th mat-header-cell *matHeaderCellDef class="stickyHeader">Fonction Apprenti</th>
         <td mat-cell *matCellDef="let element">
           <ng-container *ngIf="element.fonctionApprenti; else notFonction">
             {{ element.fonctionApprenti }}
@@ -142,7 +142,7 @@
       </ng-container>
       
       <ng-container matColumnDef="langue">
-        <th mat-header-cell *matHeaderCellDef>Langue</th>
+        <th mat-header-cell *matHeaderCellDef class="stickyHeader">Langue</th>
         <td mat-cell *matCellDef="let element">
           <ng-container *ngIf="element.langue; else notLangue">
             {{ element.langue }}
@@ -152,7 +152,7 @@
       </ng-container>
       
       <ng-container matColumnDef="commentaireAffectation">
-        <th mat-header-cell *matHeaderCellDef>Commentaire Affectation</th>
+        <th mat-header-cell *matHeaderCellDef class="stickyHeader">Commentaire Affectation</th>
         <td mat-cell *matCellDef="let element" class="truncate-col-commentaire">
           <ng-container *ngIf="element.commentaireAffectation; else notComment">
             {{ element.commentaireAffectation }}
@@ -162,7 +162,7 @@
       </ng-container>
       
       <ng-container matColumnDef="departementRattachement">
-        <th mat-header-cell *matHeaderCellDef>Département Rattachement</th>
+        <th mat-header-cell *matHeaderCellDef class="stickyHeader">Département Rattachement</th>
         <td mat-cell *matCellDef="let element">
           <ng-container *ngIf="element.departementRattachement; else notDept">
             {{ element.departementRattachement }}
@@ -172,7 +172,7 @@
       </ng-container>
       
       <ng-container matColumnDef="affecte">
-        <th mat-header-cell *matHeaderCellDef>Affecté</th>
+        <th mat-header-cell *matHeaderCellDef class="stickyHeader">Affecté</th>
         <td mat-cell *matCellDef="let element">
           <ng-container *ngIf="element.affecte != null; else notAffecte">
             {{ element.affecte ? 'Oui' : 'Non' }}
@@ -183,7 +183,7 @@
       
 
       <ng-container matColumnDef="tuteur">
-        <th mat-header-cell *matHeaderCellDef>Tuteur</th>
+        <th mat-header-cell *matHeaderCellDef class="stickyHeader">Tuteur</th>
         <td mat-cell *matCellDef="let element">
           <ng-container *ngIf="element.tuteur; else notAssigned">
             {{ element.tuteur.nom }} {{ element.tuteur.prenom }}
@@ -195,7 +195,7 @@
       </ng-container>
 
       <ng-container matColumnDef="actions" *ngIf="showEdit || showDelete">
-        <th mat-header-cell *matHeaderCellDef class="sticky">Actions</th>
+        <th mat-header-cell *matHeaderCellDef class="stickyHeader sticky">Actions</th>
         <td mat-cell *matCellDef="let element" class="sticky">
           <button type="button" [routerLink]="['/etudiants/edit', element.id]" class="icon-btn edit" *ngIf="showEdit" title="Éditer">
             <mat-icon>edit</mat-icon>
