--- a/gestion-tutorat-front/src/app/components/tuteur-create/tuteur-create.component.html
+++ b/gestion-tutorat-front/src/app/components/tuteur-create/tuteur-create.component.html
@@ -5,97 +5,142 @@
     </div>
     <div class="card-body">
       <form [formGroup]="tuteurForm" (ngSubmit)="onSubmit()">
+
+        <!-- Nom -->
         <div class="form-group">
           <label>Nom</label>
-          <input type="text" formControlName="nom" class="form-control" placeholder="Nom">
+          <input type="text" formControlName="nom" class="form-control" [ngClass]="{ 'is-invalid': submitted && f['nom'].invalid }">
+          <div *ngIf="submitted && f['nom'].invalid" class="invalid-feedback">Champ obligatoire.</div>
         </div>
+
+        <!-- Prénom -->
         <div class="form-group">
           <label>Prénom</label>
-          <input type="text" formControlName="prenom" class="form-control" placeholder="Prénom">
+          <input type="text" formControlName="prenom" class="form-control" [ngClass]="{ 'is-invalid': submitted && f['prenom'].invalid }">
+          <div *ngIf="submitted && f['prenom'].invalid" class="invalid-feedback">Champ obligatoire.</div>
         </div>
+
+        <!-- Email -->
         <div class="form-group">
           <label>Email</label>
-          <input type="email" formControlName="email" class="form-control" placeholder="Email">
+          <input type="email" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f['email'].invalid }">
+          <div *ngIf="submitted && f['email'].invalid" class="invalid-feedback">
+            <span *ngIf="f['email'].errors?.['required']">Champ obligatoire.</span>
+            <span *ngIf="f['email'].errors?.['email']">Format e-mail invalide.</span>
+          </div>
         </div>
+
+        <!-- Département -->
         <div class="form-group">
           <label>Département</label>
-          <input type="text" formControlName="departement" class="form-control" placeholder="Département">
+          <input type="text" formControlName="departement" class="form-control" [ngClass]="{ 'is-invalid': submitted && f['departement'].invalid }">
+          <div *ngIf="submitted && f['departement'].invalid" class="invalid-feedback">Champ obligatoire.</div>
         </div>
+
+        <!-- Est Eligible -->
         <div class="form-group form-check">
           <input type="checkbox" formControlName="estEligiblePourTutorat" class="form-check-input" id="eligible">
           <label class="form-check-label" for="eligible">Est Eligible pour Tutorat</label>
         </div>
+
+        <!-- Statut -->
         <div class="form-group">
           <label>Statut</label>
-          <input type="text" formControlName="statut" class="form-control" placeholder="Statut">
+          <input type="text" formControlName="statut" class="form-control" [ngClass]="{ 'is-invalid': submitted && f['statut'].invalid }">
+          <div *ngIf="submitted && f['statut'].invalid" class="invalid-feedback">Champ obligatoire.</div>
         </div>
+
+        <!-- Champs facultatifs -->
         <div class="form-group">
           <label>Colonne 2 (facultatif)</label>
-          <input type="text" formControlName="colonne2" class="form-control" placeholder="Colonne 2">
+          <input type="text" formControlName="colonne2" class="form-control">
         </div>
+
         <div class="form-group">
           <label>Info Statut (facultatif)</label>
-          <input type="text" formControlName="infoStatut" class="form-control" placeholder="Info Statut">
+          <input type="text" formControlName="infoStatut" class="form-control">
         </div>
+
         <div class="form-group">
           <label>Langue Tutorats (séparez par des virgules)</label>
-          <input type="text" formControlName="langueTutorat" class="form-control" placeholder="Langue Tutorats">
+          <input type="text" formControlName="langueTutorat" class="form-control">
         </div>
+
         <div class="form-group">
           <label>Profil</label>
-          <input type="text" formControlName="profil" class="form-control" placeholder="Profil">
+          <input type="text" formControlName="profil" class="form-control" [ngClass]="{ 'is-invalid': submitted && f['profil'].invalid }">
+          <div *ngIf="submitted && f['profil'].invalid" class="invalid-feedback">Champ obligatoire.</div>
         </div>
+
+        <!-- Champs numériques -->
         <div class="form-group">
           <label>Par Tutorats Alt</label>
-          <input type="number" formControlName="parTutoratAlt" class="form-control" placeholder="Par Tutorats Alt">
+          <input type="number" formControlName="parTutoratAlt" class="form-control">
         </div>
+
         <div class="form-group">
           <label>Tutorats Alt Affectés</label>
-          <input type="number" formControlName="tutoratAltAff" class="form-control" placeholder="Tutorats Alt Affectés">
+          <input type="number" formControlName="tutoratAltAff" class="form-control">
         </div>
+
         <div class="form-group">
           <label>Solde Alt</label>
-          <input type="number" formControlName="soldeAlt" class="form-control" placeholder="Solde Alt">
+          <input type="number" formControlName="soldeAlt" class="form-control">
         </div>
+
         <div class="form-group">
           <label>Par Tutorats Ini</label>
-          <input type="number" formControlName="parTutoratIni" class="form-control" placeholder="Par Tutorats Ini">
+          <input type="number" formControlName="parTutoratIni" class="form-control">
         </div>
+
         <div class="form-group">
           <label>Tutorats Ini Affectés</label>
-          <input type="number" formControlName="tutoratIniAff" class="form-control" placeholder="Tutorats Ini Affectés">
+          <input type="number" formControlName="tutoratIniAff" class="form-control">
         </div>
+
         <div class="form-group">
           <label>Solde Ini</label>
-          <input type="number" formControlName="soldeIni" class="form-control" placeholder="Solde Ini">
+          <input type="number" formControlName="soldeIni" class="form-control">
         </div>
+
         <div class="form-group">
           <label>Total Étudiants Par</label>
-          <input type="number" formControlName="totalEtudiantsPar" class="form-control" placeholder="Total Étudiants Par">
+          <input type="number" formControlName="totalEtudiantsPar" class="form-control">
         </div>
+
         <div class="form-group">
           <label>Nombre de Tutorats Affectés</label>
-          <input type="number" formControlName="nbTutoratAffecte" class="form-control" placeholder="Nombre de Tutorats Affectés">
+          <input type="number" formControlName="nbTutoratAffecte" class="form-control">
         </div>
+
         <div class="form-group">
           <label>Solde Tutorat Restant</label>
-          <input type="number" formControlName="soldeTutoratRestant" class="form-control" placeholder="Solde Tutorat Restant">
+          <input type="number" formControlName="soldeTutoratRestant" class="form-control">
         </div>
+
         <div class="form-group">
           <label>Matieres (séparez par des virgules)</label>
-          <input type="text" formControlName="matieres" class="form-control" placeholder="Matieres">
+          <input type="text" formControlName="matieres" class="form-control">
         </div>
+
         <div class="form-group">
           <label>Domaines Expertise (séparez par des virgules)</label>
-          <input type="text" formControlName="domainesExpertise" class="form-control" placeholder="Domaines Expertise">
+          <input type="text" formControlName="domainesExpertise" class="form-control">
         </div>
+
         <div class="text-center">
           <button type="submit" class="btn btn-submit">Créer le Tuteur</button>
         </div>
       </form>
-      <div *ngIf="successMessage" class="alert alert-success success-alert">
+
+      <!-- Messages d'alerte -->
+      <div *ngIf="successMessage" class="alert alert-success mt-3 text-center">
         {{ successMessage }}
       </div>
+<div *ngIf="errorMessage" class="alert alert-danger mt-3 text-center">
+  {{ errorMessage }}
+</div>
+
     </div>
   </div>
 </div>
